# pnex

./: .gitignore  AGENTS.md  LIQUID_CURSOR_ROLLBACK.md  index.html  package-lock.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  test.html  tsconfig.json  vite.config.ts
.github/workflows/: build.yml
docs/: cpp-proposal-implementation.md  liquid-cursor-tui-compatibility.md
patches/: @xterm__addon-webgl@0.19.0.patch
reports/: liquid-cursor-diagnostic-2026-07-14.json  liquid-cursor-diagnostic-2026-07-14.md
scripts/: build-preload.js  build-renderer.js  copy-static.js
src/: input-shadow.ts  liquid-cursor.ts  main.ts  notifications.ts  styles.css  themes.ts  window-loading.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: config.rs  lib.rs  main.rs  notification.rs  pty.rs
src-tauri/src/notification/: windows.rs
src/lib/ai/: CtrlAndI.agent.ts  CtrlAndShiftAndI.agent.ts  ai-error.ts  index.ts  openai-client.ts
src/lib/config/: config-manager.ts  default-config.ts  default-theme.ts  index.ts  themes.ts
src/lib/terminal/: index.ts  osc.ts  ps1.ts  shell-manager.ts
src/main/: index.ts
src/main/ipc/: index.ts  ipc-handler.ts
src/main/menu/: app-menu.ts  index.ts
src/main/window/: create-window.ts  index.ts
src/preload/: preload.ts
src/renderer/: app.ts  index.html
src/renderer/lib/: agent-stream.ts  ai-hint.ts  chat-mode-state.ts  command-history-picker.ts  cursor-visibility.ts  frame-loop.ts  inline-chat.ts  input-tracker.ts  pty-flow-control.ts  (+4 more)
src/shared/: ipc-channels.ts
(+14 files in other folders)
