[package]
name = "pnex"
version = "0.1.0"
description = "A fast native terminal workspace"
authors = ["pnex contributors"]
edition = "2021"

[lib]
name = "pnex_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
portable-pty = "0.9"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2", features = ["devtools"] }
tauri-plugin-opener = "2"
