[package]
name = "pnex"
version = "0.1.0"
description = "A fast native terminal workspace"
authors = ["pnex contributors"]
edition = "2021"

[lib]
name = "pnex_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
notify-rust = "4.18"
portable-pty = "0.9"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2", features = ["devtools"] }
tauri-plugin-opener = "2"

[target.'cfg(target_os = "windows")'.dependencies]
windows = { version = "0.61", features = [
  "Win32_Foundation",
  "Win32_Storage_EnhancedStorage",
  "Win32_System_Com",
  "Win32_System_Com_StructuredStorage",
  "Win32_System_Variant",
  "Win32_UI_Shell",
  "Win32_UI_Shell_PropertiesSystem",
] }
